--- a/AdnAlquilerEspacio/build.gradle
+++ b/AdnAlquilerEspacio/build.gradle
@@ -1,6 +1,44 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+
+
+
+    ext {
+        // Sdk and tools
+        compileSdkVersion = 28
+        minSdkVersion = 21
+        targetSdkVersion = 28
+
+        // App dependencies
+        appCompatVersion = '1.1.0'
+        constraintLayoutVersion = '2.0.0-beta4'
+        coreTestingVersion = '2.1.0'
+        coroutinesVersion = "1.3.0-M2"
+        espressoVersion = '3.2.0'
+        fragmentVersion = '1.2.0-rc05'
+        glideVersion = '4.11.0'
+        gradleVersion = '3.5.3'
+        gsonVersion = '2.8.6'
+        junitVersion = '4.13'
+        kotlinVersion = '1.3.61'
+        ktlintVersion = '0.33.0'
+        ktxVersion = '1.1.0'
+        lifecycleVersion = '2.2.0-rc03'
+        materialVersion = '1.2.0-alpha03'
+        navigationVersion = '2.2.0'
+        recyclerViewVersion = '1.2.0-alpha01'
+        cardview_version = '1.0.0'
+        roomVersion = '2.2.3'
+        runnerVersion = '1.0.1'
+        truthVersion = '1.0.1'
+        testExtJunit = '1.1.1'
+        uiAutomatorVersion = '2.2.0'
+        viewPagerVersion = '1.0.0'
+        workVersion = '2.3.0'
+    }
+
     ext.kotlin_version = '1.3.61'
     repositories {
         google()
