cambio en el archivo Sonar.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,17 +10,18 @@ sonar.modules=AdnAlquilerEspacio
 AdnAlquilerEspacio.sonar.projectBaseDir=./AdnAlquilerEspacio
 
 ##FRONT
-AdnAlquilerEspacio.sonar.sources=app/src/main/java
+sonar.sources=app/src/main/java
 
 #Rutas separadas por comas a directorios que contienen los archivos compilados (.class) correspondientes a sus archivos de origen
-AdnAlquilerEspacio.sonar.java.binaries=app/build/intermediates
+sonar.java.binaries=app/build/intermediates
 
-AdnAlquilerEspacio.sonar.tests=app/src/test
+sonar.tests=app/src/test
 
 #Rutas separadas por comas a directorios que contienen los archivos compilados (.class) correspondientes a los archivos de prueba
-AdnAlquilerEspacio.sonar.java.test.binaries=app/build/intermediates
+sonar.java.test.binaries=app/build/intermediates
 
-AdnAlquilerEspacio.sonar.junit.reportPaths=app/build/test-results/testDebugUnitTest
+sonar.junit.reportPaths=app/build/test-results/testDebugUnitTest
 
 # Language
+sonar.inclusions=.java,.kt
 sonar.language=kotlin
