cambio en el archivo Sonar.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,13 +7,15 @@ sonar.projectDescription=Se pueden alquilar Espacios de un parqueadero
 #Datos de Configuracion
 sonar.sourceEncoding=UTF-8
 
+AdnAlquilerEspacio.sonar.projectBaseDir=./AdnAlquilerEspacio
+
 ##FRONT
 sonar.sources=app/src/main/java
 
 #Rutas separadas por comas a directorios que contienen los archivos compilados (.class) correspondientes a sus archivos de origen
 sonar.java.binaries=app/build/intermediates
 
-sonar.tests=app/src/test
+sonar.tests=app/src/test/java
 
 #Rutas separadas por comas a directorios que contienen los archivos compilados (.class) correspondientes a los archivos de prueba
 sonar.java.test.binaries=app/build/intermediates
