cambio en el archivo Sonar.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sources=app/src/main/java
 #Rutas separadas por comas a directorios que contienen los archivos compilados (.class) correspondientes a sus archivos de origen
 sonar.java.binaries=app/build/intermediates
 
-sonar.tests=app/src/test/java
+sonar.tests=app/src/test
 
 #Rutas separadas por comas a directorios que contienen los archivos compilados (.class) correspondientes a los archivos de prueba
 sonar.java.test.binaries=app/build/intermediates
