--- a/AdnAlquilerEspacio/build.gradle
+++ b/AdnAlquilerEspacio/build.gradle
@@ -37,6 +37,7 @@ buildscript {
         uiAutomatorVersion = '2.2.0'
         viewPagerVersion = '1.0.0'
         workVersion = '2.3.0'
+        daggerVersion = '2.15'
     }
 
     ext.kotlin_version = '1.3.61'
