cambio en el archivo Sonar.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,17 +9,22 @@ sonar.sourceEncoding=UTF-8
 sonar.modules=AdnAlquilerEspacio
 AdnAlquilerEspacio.sonar.projectBaseDir=./AdnAlquilerEspacio
 
+sonar.report.export.path=sonar-report.json
+
 ##FRONT
 AdnAlquilerEspacio.sonar.sources=app/src/main/java
 
-#Rutas separadas por comas a directorios que contienen los archivos compilados (.class) correspondientes a sus archivos de origen
-AdnAlquilerEspacio.sonar.java.binaries=app/build/intermediates
+AdnAlquilerEspacio.sonar.java.binaries=target/classes
+
+AdnAlquilerEspacio.sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
 
 AdnAlquilerEspacio.sonar.tests=app/src/test
 
-#Rutas separadas por comas a directorios que contienen los archivos compilados (.class) correspondientes a los archivos de prueba
-AdnAlquilerEspacio.sonar.java.test.binaries=app/build/intermediates
+AdnAlquilerEspacio.sonar.java.coveragePlugin=jacoco
 
+AdnAlquilerEspacio.sonar.jacoco.reportPaths=app/build/jacoco/testDebugUnitTest.exec
+
+AdnAlquilerEspacio.sonar.junit.reportPaths=app/build/test-results/testDebugUnitTest
 
 # Language
 sonar.language=java,kotlin
