--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,11 +16,8 @@ AdnAlquilerEspacio.sonar.sources=app/src/main/java
 
 AdnAlquilerEspacio.sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
 
-AdnAlquilerEspacio.sonar.tests=app/src/test
+AdnAlquilerEspacio.sonar.tests=app/src/test/java
 
 AdnAlquilerEspacio.sonar.java.coveragePlugin=jacoco
 
 AdnAlquilerEspacio.sonar.jacoco.reportPaths=app/build/jacoco/testDebugUnitTest.exec
-
-# Language
-sonar.language=java,kotlin
