cambio en el archivo Sonar.properties

--- a/AdnAlquilerEspacio/sonar-project.properties
+++ b/AdnAlquilerEspacio/sonar-project.properties
@@ -10,12 +10,12 @@ sonar.sourceEncoding=UTF-8
 sonar.report.export.path=sonar-report.json
 
 ##FRONT
-AdnAlquilerEspacio.sonar.sources=app/src/main/java
+sonar.sources=app/src/main/java
 
-AdnAlquilerEspacio.sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
+sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
 
-AdnAlquilerEspacio.sonar.tests=app/src/test/java
+sonar.tests=app/src/test/java
 
-AdnAlquilerEspacio.sonar.java.coveragePlugin=jacoco
+sonar.java.coveragePlugin=jacoco
 
-AdnAlquilerEspacio.sonar.jacoco.reportPaths=app/build/jacoco/testDebugUnitTest.exec
+sonar.jacoco.reportPaths=app/build/jacoco/testDebugUnitTest.exec
