--- a/AdnAlquilerEspacio/sonar-project.properties
+++ b/AdnAlquilerEspacio/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.sources=app/src/main/java
 
 sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
 
-sonar.tests=app/src/test/java
+sonar.tests=app/src/test
 
 sonar.java.coveragePlugin=jacoco
 
