cambio en el archivo Sonar.properties

--- a/AdnAlquilerEspacio/sonar-project.properties
+++ b/AdnAlquilerEspacio/sonar-project.properties
@@ -10,12 +10,12 @@ sonar.sourceEncoding=UTF-8
 sonar.report.export.path=sonar-report.json
 
 ##FRONT
-sonar.sources=app/src/main/java
+AdnAlquilerEspacio.sonar.sources=app/src/main/java
 
-sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
+AdnAlquilerEspacio.sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
 
-sonar.tests=app/src/test
+AdnAlquilerEspacio.sonar.tests=app/src/test
 
-sonar.java.coveragePlugin=jacoco
+AdnAlquilerEspacio.sonar.java.coveragePlugin=jacoco
 
-sonar.jacoco.reportPaths=app/build/jacoco/testDebugUnitTest.exec
+AdnAlquilerEspacio.sonar.jacoco.reportPaths=app/build/jacoco/testDebugUnitTest.exec
