cambio en el archivo Sonar.properties

--- a/AdnAlquilerEspacio/sonar-project.properties
+++ b/AdnAlquilerEspacio/sonar-project.properties
@@ -14,7 +14,7 @@ AdnAlquilerEspacio.sonar.sources=app/src/main/java
 
 AdnAlquilerEspacio.sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
 
-AdnAlquilerEspacio.sonar.tests=app/src/test
+AdnAlquilerEspacio.sonar.tests=app/src/test/java
 
 AdnAlquilerEspacio.sonar.java.coveragePlugin=jacoco
 
