--- a/AdnAlquilerEspacio/app/build.gradle
+++ b/AdnAlquilerEspacio/app/build.gradle
@@ -22,15 +22,29 @@ android {
         }
         debug {
             testCoverageEnabled true
+            resValue("string", "PORT_NUMBER", "8081")
+
         }
     }
 
+    defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
+    }
+    sourceSets {
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+    }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 
     jacoco {
         version "0.7.1.201405082137"
     }
-
-
     task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
         group = "Reporting"
         description = "Generate Jacoco coverage reports after running tests."
@@ -38,8 +52,6 @@ android {
             xml.enabled = true
         }
     }
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -48,12 +60,11 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-
     dataBinding {
         enabled = true
     }
-
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -63,22 +74,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-
     //Material
     implementation "com.google.android.material:material:$rootProject.materialVersion"
     implementation "androidx.cardview:cardview:$cardview_version"
     implementation "androidx.recyclerview:recyclerview:$rootProject.recyclerViewVersion"
     implementation "androidx.viewpager2:viewpager2:$rootProject.viewPagerVersion"
     implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
-
-
-    //dagger 2
-    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
-
-    //to enable DaggerActivity, DaggerBroadcastReceiver, DaggerFragment etc classes
-    implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -97,24 +98,41 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
 
-    androidTestImplementation "androidx.arch.core:core-testing:2.0.1"
+    //Testing
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
 
-    androidTestImplementation('com.android.support.test:runner:0.5') {
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+
+
+    //Rx
+    implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+
+    //Room testing
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'junit:junit:4.13'
+    testImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+
+    //Debug database
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
+    androidTestImplementation('com.android.support.test:runner:1.0.2') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation('com.android.support.test:rules:0.5') {
+    androidTestImplementation('com.android.support.test:rules:1.0.2') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2') {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation('com.android.support.test.espresso:espresso-intents:2.2.2') {
+    androidTestImplementation('com.android.support.test.espresso:espresso-intents:3.0.2') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.2.2') {
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:3.0.2') {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
@@ -122,7 +140,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'design'
     }
 
-    testImplementation 'android.arch.core:core-testing:1.0.0-alpha3'
+
+
+    def room_version = "1.1.1"
+    def lifecycle_version = "1.1.1"
+
+    androidTestImplementation "android.arch.persistence.room:testing:$room_version"
+    androidTestImplementation "android.arch.core:core-testing:$lifecycle_version"
+
+    testImplementation 'android.arch.core:core-testing:1.1.1'
     testImplementation 'org.mockito:mockito-core:2.8.47'
     testImplementation 'org.powermock:powermock-core:1.7.4'
     testImplementation 'org.powermock:powermock-module-testng:1.7.4'
