--- a/AdnAlquilerEspacio/build.gradle
+++ b/AdnAlquilerEspacio/build.gradle
@@ -38,6 +38,7 @@ buildscript {
         viewPagerVersion = '1.0.0'
         workVersion = '2.3.0'
         daggerVersion = '2.15'
+        lifecycle_version = '2.1.0'
     }
 
     ext.kotlin_version = '1.3.61'
