--- a/AdnAlquilerEspacio/build.gradle
+++ b/AdnAlquilerEspacio/build.gradle
@@ -25,8 +25,8 @@ buildscript {
         kotlinVersion = '1.3.61'
         ktlintVersion = '0.33.0'
         ktxVersion = '1.1.0'
-        lifecycleVersion = '2.2.0-rc03'
-        materialVersion = '1.2.0-alpha03'
+        lifecycleVersion = '2.2.0'
+        materialVersion = '1.2.0-alpha04'
         navigationVersion = '2.2.0'
         recyclerViewVersion = '1.2.0-alpha01'
         cardview_version = '1.0.0'
