--- a/AdnAlquilerEspacio/app/build.gradle
+++ b/AdnAlquilerEspacio/app/build.gradle
@@ -126,6 +126,7 @@ dependencies {
     //Rx
     implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
 
     //Room testing
     testImplementation 'junit:junit:4.13'
@@ -135,6 +136,7 @@ dependencies {
 
     //Debug database
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
 
     androidTestImplementation('com.android.support.test:runner:1.0.2') {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -155,8 +157,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'design'
     }
-
-
 
     def room_version = "1.1.1"
     def lifecycle_version = "1.1.1"
