--- a/AdnAlquilerEspacio/build.gradle
+++ b/AdnAlquilerEspacio/build.gradle
@@ -43,7 +43,9 @@ buildscript {
 
     ext.kotlin_version = '1.3.61'
     repositories {
-        google()
+        maven {
+            url 'https://maven.google.com'
+        }
         jcenter()
         
     }
@@ -52,14 +54,14 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         def nav_version = "2.1.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
-        google()
+        maven {
+            url 'https://maven.google.com'
+        }
         jcenter()
         
     }
