cambio de sonnar.properties

--- a/AdnAlquilerEspacio/sonar-project.properties
+++ b/AdnAlquilerEspacio/sonar-project.properties
@@ -4,12 +4,10 @@ sonar.projectName=Ceiba-AlquilerEstacionamiento(carlos.quezada)
 sonar.projectVersion=1.0
 sonar.projectDescription=Se pueden alquilar Espacios de un parqueadero
 
-#Datos de Configuracion
 sonar.sourceEncoding=UTF-8
 
 sonar.report.export.path=sonar-report.json
 
-##FRONT
 AdnAlquilerEspacio.sonar.sources=app/src/main/java
 
 AdnAlquilerEspacio.sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
@@ -19,3 +17,14 @@ AdnAlquilerEspacio.sonar.tests=app/src/test/java
 AdnAlquilerEspacio.sonar.java.coveragePlugin=jacoco
 
 AdnAlquilerEspacio.sonar.jacoco.reportPaths=app/build/jacoco/testDebugUnitTest.exec
+
+#Importar informes de cobertura de codigo JaCoCo
+AdnAlquilerEspacio.sonar.java.coveragePlugin=jacoco
+
+AdnAlquilerEspacio.sonar.junit.reportPaths=app/build/test-results/testDebugUnitTest
+
+sonar.sources=src/
+sonar.inclusions=*.java,*.kt
+
+# Language
+sonar.language=kotlin
