cambio en archivo Sonnar.properties

--- a/AdnAlquilerEspacio/sonar-project.properties
+++ b/AdnAlquilerEspacio/sonar-project.properties
@@ -4,22 +4,18 @@ sonar.projectName=Ceiba-AlquilerEstacionamiento(carlos.quezada)
 sonar.projectVersion=1.0
 sonar.projectDescription=Se pueden alquilar Espacios de un parqueadero
 
+#Datos de Configuracion
 sonar.sourceEncoding=UTF-8
 
 sonar.report.export.path=sonar-report.json
 
+##FRONT
 AdnAlquilerEspacio.sonar.sources=app/src/main/java
 
 AdnAlquilerEspacio.sonar.java.binaries=target/classes,app/build/tmp/kotlin-classes
 
 AdnAlquilerEspacio.sonar.tests=app/src/test/java
-        
-#Importar informes de cobertura de codigo JaCoCo
+
 AdnAlquilerEspacio.sonar.java.coveragePlugin=jacoco
 
-AdnAlquilerEspacio.sonar.junit.reportPaths=app/build/test-results/testDebugUnitTest
-
-sonar.inclusions=*.java,*.kt
-
-# Language
-sonar.language=kotlin
+AdnAlquilerEspacio.sonar.jacoco.reportPaths=app/build/jacoco/testDebugUnitTest.exec
